# harbour-squilla

./: .gitignore  HeySMS.desktop  HeySMS.pro  MANIFEST  Makefile  README  README.rst  build_myapp.py  dep  heysms.pro  heysms.py  heysms_loader.py  notes  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
daemon/: MANIFEST  Makefile  requirements.txt  run_squilla_daemon.py  runserver.py
daemon/rpm/: harbour-squilla-daemon-0.3-1.armv7hl.rpm  harbour-squilla-daemon-0.3-1.src.rpm  harbour-squilla-daemon.spec
daemon/squilla/: __init__.py
embedded_libs/dbus/: bus.py
embedded_libs/mdns/: zeroconf.py
harmattan/: CHANGELOG
harmattan/heysms/: __init__.py
harmattan/i18n/: heysms_de.qm
harmattan/scripts/: heysms
heysms/: __init__.py  application.py  friend_list.py  heysms.py
heysms/lib/: __init__.py  call_listener.py  config.py  controller.py  country_code.py  friend.py  friend_list.py  history.py  lib.py  lib_sms.py  logger.py  presence_browser.py  scheduler.py  server.py  sms_listener.py
i18n/: heysms_de.qm  heysms_de.ts  heysms_en.qm  heysms_en.ts  heysms_fr.qm  heysms_fr.ts
images/: heysms.xcf
lib/: ava.py  friend.py  history.py  lib.py  lib_sms.py  presence_listener.py  scheduler.py  server.py  sms_listener.py  tata.py  toto.py
manager/: MANIFEST  Makefile  TODO
old/: INSTALL  MANIFEST  Makefile  NEWS  README.rst  RELEASING  notes
qml/: HeySMS.qml  Python.qml  Squilla.qml
rpm/: HeySMS.changes.in  HeySMS.spec  HeySMS.yaml  harbour-squilla.spec
squilla/: __init__.py  application.py  daemon.py  version.py
translations/: HeySMS.ts
(+138 files in other folders)
