[metadata]
name = squilla
summary = Squilla
author = Thibault
author_email = Thibault Cohen
license = GPLv3
url = https://github.com/titilambert/harbour-squilla
description-file =
    README.rst

[files]
packages = squills
data_files =

[global]
setup-hooks =

[entry_points]
console_scripts =
    squilla-daemon = squilla:main

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
